Spring configuration with java code

--- a/spring-annotations/src/coach.properties
+++ b/spring-annotations/src/coach.properties
@@ -1,3 +1,5 @@
+foo.email=swim@apollo.com
+foo.team=Dzikie Wodne Koty
 foo.fortune1=beware of the dark
 foo.fortune2=Expect the unexpected
 foo.fortune3=Just Chill
